Parser/YulParser.py
# Generated from Yul.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YulParser ( Parser ):

    grammarFileName = "Yul.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'leave'", "'break'", "'continue'", "'{'", 
                     "'}'", "'let'", "':='", "','", "'if'", "'for'", "'switch'", 
                     "'case'", "'default'", "'function'", "'('", "')'", 
                     "'->'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DECIMAL_NUMBER", "HEX_NUMBER", "STRING_LITERAL", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_yulUnit = 0
    RULE_yulStatement = 1
    RULE_yulBlock = 2
    RULE_yulVariableDeclaration = 3
    RULE_yulAssignment = 4
    RULE_yulExpressionStatement = 5
    RULE_yulIfStatement = 6
    RULE_yulForStatement = 7
    RULE_yulSwitchStatement = 8
    RULE_yulFunctionDefinition = 9
    RULE_yulExpression = 10
    RULE_yulFunctionCall = 11
    RULE_yulLiteral = 12

    ruleNames =  [ "yulUnit", "yulStatement", "yulBlock", "yulVariableDeclaration", 
                   "yulAssignment", "yulExpressionStatement", "yulIfStatement", 
                   "yulForStatement", "yulSwitchStatement", "yulFunctionDefinition", 
                   "yulExpression", "yulFunctionCall", "yulLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    DECIMAL_NUMBER=20
    HEX_NUMBER=21
    STRING_LITERAL=22
    IDENTIFIER=23
    WS=24
    LINE_COMMENT=25
    BLOCK_COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class YulUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YulParser.EOF, 0)

        def yulStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulStatementContext)
            else:
                return self.getTypedRuleContext(YulParser.YulStatementContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yulUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulUnit" ):
                listener.enterYulUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulUnit" ):
                listener.exitYulUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulUnit" ):
                return visitor.visitYulUnit(self)
            else:
                return visitor.visitChildren(self)




    def yulUnit(self):

        localctx = YulParser.YulUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_yulUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8408670) != 0):
                self.state = 26
                self.yulStatement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(YulParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulBlock(self):
            return self.getTypedRuleContext(YulParser.YulBlockContext,0)


        def yulVariableDeclaration(self):
            return self.getTypedRuleContext(YulParser.YulVariableDeclarationContext,0)


        def yulAssignment(self):
            return self.getTypedRuleContext(YulParser.YulAssignmentContext,0)


        def yulExpressionStatement(self):
            return self.getTypedRuleContext(YulParser.YulExpressionStatementContext,0)


        def yulIfStatement(self):
            return self.getTypedRuleContext(YulParser.YulIfStatementContext,0)


        def yulForStatement(self):
            return self.getTypedRuleContext(YulParser.YulForStatementContext,0)


        def yulSwitchStatement(self):
            return self.getTypedRuleContext(YulParser.YulSwitchStatementContext,0)


        def yulFunctionDefinition(self):
            return self.getTypedRuleContext(YulParser.YulFunctionDefinitionContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulStatement" ):
                listener.enterYulStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulStatement" ):
                listener.exitYulStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulStatement" ):
                return visitor.visitYulStatement(self)
            else:
                return visitor.visitChildren(self)




    def yulStatement(self):

        localctx = YulParser.YulStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_yulStatement)
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.yulBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.yulVariableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.yulAssignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.yulExpressionStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.yulIfStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 39
                self.yulForStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 40
                self.yulSwitchStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 41
                self.yulFunctionDefinition()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 42
                self.match(YulParser.T__0)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 43
                self.match(YulParser.T__1)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 44
                self.match(YulParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulStatementContext)
            else:
                return self.getTypedRuleContext(YulParser.YulStatementContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yulBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulBlock" ):
                listener.enterYulBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulBlock" ):
                listener.exitYulBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulBlock" ):
                return visitor.visitYulBlock(self)
            else:
                return visitor.visitChildren(self)




    def yulBlock(self):

        localctx = YulParser.YulBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_yulBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(YulParser.T__3)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8408670) != 0):
                self.state = 48
                self.yulStatement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(YulParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulVariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(YulParser.IDENTIFIER)
            else:
                return self.getToken(YulParser.IDENTIFIER, i)

        def yulExpression(self):
            return self.getTypedRuleContext(YulParser.YulExpressionContext,0)


        def yulFunctionCall(self):
            return self.getTypedRuleContext(YulParser.YulFunctionCallContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulVariableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulVariableDeclaration" ):
                listener.enterYulVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulVariableDeclaration" ):
                listener.exitYulVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulVariableDeclaration" ):
                return visitor.visitYulVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def yulVariableDeclaration(self):

        localctx = YulParser.YulVariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_yulVariableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(YulParser.T__5)
                self.state = 57
                self.match(YulParser.IDENTIFIER)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 58
                    self.match(YulParser.T__6)
                    self.state = 59
                    self.yulExpression()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(YulParser.T__5)
                self.state = 63
                self.match(YulParser.IDENTIFIER)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 64
                    self.match(YulParser.T__7)
                    self.state = 65
                    self.match(YulParser.IDENTIFIER)
                    self.state = 68 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==8):
                        break

                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 70
                    self.match(YulParser.T__6)
                    self.state = 71
                    self.yulFunctionCall()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(YulParser.IDENTIFIER)
            else:
                return self.getToken(YulParser.IDENTIFIER, i)

        def yulExpression(self):
            return self.getTypedRuleContext(YulParser.YulExpressionContext,0)


        def yulFunctionCall(self):
            return self.getTypedRuleContext(YulParser.YulFunctionCallContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulAssignment" ):
                listener.enterYulAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulAssignment" ):
                listener.exitYulAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulAssignment" ):
                return visitor.visitYulAssignment(self)
            else:
                return visitor.visitChildren(self)




    def yulAssignment(self):

        localctx = YulParser.YulAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_yulAssignment)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(YulParser.IDENTIFIER)
                self.state = 77
                self.match(YulParser.T__6)
                self.state = 78
                self.yulExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(YulParser.IDENTIFIER)
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 80
                    self.match(YulParser.T__7)
                    self.state = 81
                    self.match(YulParser.IDENTIFIER)
                    self.state = 84 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==8):
                        break

                self.state = 86
                self.match(YulParser.T__6)
                self.state = 87
                self.yulFunctionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulFunctionCall(self):
            return self.getTypedRuleContext(YulParser.YulFunctionCallContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulExpressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulExpressionStatement" ):
                listener.enterYulExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulExpressionStatement" ):
                listener.exitYulExpressionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulExpressionStatement" ):
                return visitor.visitYulExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def yulExpressionStatement(self):

        localctx = YulParser.YulExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_yulExpressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.yulFunctionCall()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulIfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulExpression(self):
            return self.getTypedRuleContext(YulParser.YulExpressionContext,0)


        def yulBlock(self):
            return self.getTypedRuleContext(YulParser.YulBlockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulIfStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulIfStatement" ):
                listener.enterYulIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulIfStatement" ):
                listener.exitYulIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulIfStatement" ):
                return visitor.visitYulIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def yulIfStatement(self):

        localctx = YulParser.YulIfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_yulIfStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(YulParser.T__8)
            self.state = 93
            self.yulExpression()
            self.state = 94
            self.yulBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulBlockContext)
            else:
                return self.getTypedRuleContext(YulParser.YulBlockContext,i)


        def yulExpression(self):
            return self.getTypedRuleContext(YulParser.YulExpressionContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulForStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulForStatement" ):
                listener.enterYulForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulForStatement" ):
                listener.exitYulForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulForStatement" ):
                return visitor.visitYulForStatement(self)
            else:
                return visitor.visitChildren(self)




    def yulForStatement(self):

        localctx = YulParser.YulForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_yulForStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(YulParser.T__9)
            self.state = 97
            self.yulBlock()
            self.state = 98
            self.yulExpression()
            self.state = 99
            self.yulBlock()
            self.state = 100
            self.yulBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulSwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulExpression(self):
            return self.getTypedRuleContext(YulParser.YulExpressionContext,0)


        def yulBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulBlockContext)
            else:
                return self.getTypedRuleContext(YulParser.YulBlockContext,i)


        def yulLiteral(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulLiteralContext)
            else:
                return self.getTypedRuleContext(YulParser.YulLiteralContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yulSwitchStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulSwitchStatement" ):
                listener.enterYulSwitchStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulSwitchStatement" ):
                listener.exitYulSwitchStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulSwitchStatement" ):
                return visitor.visitYulSwitchStatement(self)
            else:
                return visitor.visitChildren(self)




    def yulSwitchStatement(self):

        localctx = YulParser.YulSwitchStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_yulSwitchStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(YulParser.T__10)
            self.state = 103
            self.yulExpression()
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 104
                    self.match(YulParser.T__11)
                    self.state = 105
                    self.yulLiteral()
                    self.state = 106
                    self.yulBlock()
                    self.state = 110 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12):
                        break

                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 112
                    self.match(YulParser.T__12)
                    self.state = 113
                    self.yulBlock()


                pass
            elif token in [13]:
                self.state = 116
                self.match(YulParser.T__12)
                self.state = 117
                self.yulBlock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulFunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(YulParser.IDENTIFIER)
            else:
                return self.getToken(YulParser.IDENTIFIER, i)

        def yulBlock(self):
            return self.getTypedRuleContext(YulParser.YulBlockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulFunctionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulFunctionDefinition" ):
                listener.enterYulFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulFunctionDefinition" ):
                listener.exitYulFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulFunctionDefinition" ):
                return visitor.visitYulFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def yulFunctionDefinition(self):

        localctx = YulParser.YulFunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_yulFunctionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(YulParser.T__13)
            self.state = 121
            self.match(YulParser.IDENTIFIER)
            self.state = 122
            self.match(YulParser.T__14)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 123
                self.match(YulParser.IDENTIFIER)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 124
                    self.match(YulParser.T__7)
                    self.state = 125
                    self.match(YulParser.IDENTIFIER)
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 133
            self.match(YulParser.T__15)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 134
                self.match(YulParser.T__16)
                self.state = 135
                self.match(YulParser.IDENTIFIER)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 136
                    self.match(YulParser.T__7)
                    self.state = 137
                    self.match(YulParser.IDENTIFIER)
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 145
            self.yulBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yulFunctionCall(self):
            return self.getTypedRuleContext(YulParser.YulFunctionCallContext,0)


        def IDENTIFIER(self):
            return self.getToken(YulParser.IDENTIFIER, 0)

        def yulLiteral(self):
            return self.getTypedRuleContext(YulParser.YulLiteralContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yulExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulExpression" ):
                listener.enterYulExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulExpression" ):
                listener.exitYulExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulExpression" ):
                return visitor.visitYulExpression(self)
            else:
                return visitor.visitChildren(self)




    def yulExpression(self):

        localctx = YulParser.YulExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_yulExpression)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.yulFunctionCall()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(YulParser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.yulLiteral()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulFunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(YulParser.IDENTIFIER, 0)

        def yulExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.YulExpressionContext)
            else:
                return self.getTypedRuleContext(YulParser.YulExpressionContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yulFunctionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulFunctionCall" ):
                listener.enterYulFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulFunctionCall" ):
                listener.exitYulFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulFunctionCall" ):
                return visitor.visitYulFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def yulFunctionCall(self):

        localctx = YulParser.YulFunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_yulFunctionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(YulParser.IDENTIFIER)
            self.state = 153
            self.match(YulParser.T__14)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16515072) != 0):
                self.state = 154
                self.yulExpression()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 155
                    self.match(YulParser.T__7)
                    self.state = 156
                    self.yulExpression()
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 164
            self.match(YulParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YulLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL_NUMBER(self):
            return self.getToken(YulParser.DECIMAL_NUMBER, 0)

        def HEX_NUMBER(self):
            return self.getToken(YulParser.HEX_NUMBER, 0)

        def STRING_LITERAL(self):
            return self.getToken(YulParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return YulParser.RULE_yulLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYulLiteral" ):
                listener.enterYulLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYulLiteral" ):
                listener.exitYulLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYulLiteral" ):
                return visitor.visitYulLiteral(self)
            else:
                return visitor.visitChildren(self)




    def yulLiteral(self):

        localctx = YulParser.YulLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_yulLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8126464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





